--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,49 +1,113 @@
-:root{
-    --bgColor: aliceblue;
-    --ticketColor: #eee5e0;
-    /* --ticketColor: #fffdf0; */
+* {
+ padding: 0;
+ margin: 0;
 }
-body{
-    background-color: var(--bgColor);
+
+:root {
+ --bgColor: rgba(233, 234, 241, 0.514);
+ --ticketColor: #7f85bb;
+ /* --ticketColor: #fffdf0; */
 }
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+body {
+ background-color: var(--bgColor);
+ max-width: 100vw;
 }
-.ticket{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    /* flex-wrap: wrap; */
-    margin: 5px;
-    padding: 20px;
-    border-radius: 50px;
-    background-color: var(--ticketColor);
+.container {
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ max-width: 100vw;
 }
-.ticket-title{
-    font-size: 25px;
-    font-weight: bold;
-    text-align: center;
+.ticket {
+ width: 50%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+ flex-wrap: wrap;
+ margin: 5px;
+ margin-bottom: 40px;
+ padding: 20px;
+ border-color: black 2px solid;
+ border-radius: 50px;
+ background-color: var(--ticketColor);
 }
-.noDisplay{
-    display: none;
+.ticket-title {
+ font-size: 25px;
+ font-family: cursive;
+ /* font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS", sans-serif; */
+ font-weight: bold;
+ text-align: center;
+ padding-bottom: 20px;
 }
-#searchInput{
-    width: 20rem;
-    height: 2rem;
-    font-size: 20px;
-    padding: 5px 5px 5px 10px;
-    border-radius: 9999px;
+
+.ticket-content {
+ padding-bottom: 20px;
+ font-size: 18px;
 }
-.btn{
-    border: none;
-    color: black;
-    background-color: white;
-    cursor: pointer;
-    width: 5rem;
-    height: 2rem;
+.noDisplay {
+ display: none;
+}
+#searchInput {
+ width: 20rem;
+ height: 2rem;
+ font-size: 18px;
+ margin-bottom: 40px;
+ margin-top: 45px;
+}
+.btn {
+ border: 2px solid;
+ background-color: transparent;
+ color: black;
+ cursor: pointer;
+ width: 5rem;
+ height: 2rem;
+ /* font-family: cursive; */
+ font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS", sans-serif;
+ font-size: 20px;
+}
+
+.btn:hover {
+ opacity: 0.6;
+}
+
+.restore-button {
+ margin-bottom: 20px;
+ position: absolute;
+ top: 47px;
+ right: 470px;
+}
+
+.labels {
+ padding-bottom: 20px;
+ margin-top: 15px;
+}
+
+.label {
+ border: 1px white solid;
+ border-radius: 50px;
+ padding-right: 10px;
+ padding-left: 10px;
+ margin-right: 8px;
+ color: white;
+}
+
+#hideTicketsCounter {
+ margin-bottom: 40px;
+ font-size: 20px;
+}
+
+.hideTicketButton {
+ margin-bottom: -10px;
+ margin-top: 20px;
+}
+.userEmail {
+ margin-bottom: 5px;
+ margin-top: 8px;
+ font-family: cursive;
+}
+.creation-time {
+ margin-bottom: 10px;
+ font-family: monospace;
 }
