--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,12 @@ body {
  background-color: var(--bgColor);
  max-width: 100vw;
 }
+.app-title{
+    font-size: 40px;
+    font-family: cursive;
+    text-align: center;
+    padding: 30px 0;
+}
 .container {
  display: flex;
  flex-direction: column;
@@ -38,7 +44,6 @@ body {
 .ticket-title {
  font-size: 25px;
  font-family: cursive;
- /* font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS", sans-serif; */
  font-weight: bold;
  text-align: center;
  padding-bottom: 20px;
@@ -57,8 +62,7 @@ body {
  width: 20rem;
  height: 2rem;
  font-size: 18px;
- margin-bottom: 40px;
- margin-top: 45px;
+ padding-left: 10px;
 }
 .btn {
  border: 2px solid;
@@ -67,7 +71,6 @@ body {
  cursor: pointer;
  width: 5rem;
  height: 2rem;
- /* font-family: cursive; */
  font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS", sans-serif;
  font-size: 20px;
 }
@@ -76,11 +79,18 @@ body {
  opacity: 0.6;
 }
 
+.counter{
+    margin: 20px;
+}
+
+.searchCounter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .restore-button {
- margin-bottom: 20px;
- position: absolute;
- top: 47px;
- right: 470px;
+ height: 2.3rem; 
 }
 
 #searchResults {
@@ -103,7 +113,7 @@ body {
 }
 
 #hideTicketsCounter {
- margin-bottom: 40px;
+ margin-top: 40px;
  font-size: 20px;
 }
 
