--- a/client/src/App.css
+++ b/client/src/App.css
@@ -83,7 +83,7 @@ body {
     margin: 20px;
 }
 
-.searchCounter{
+.hiddenCounter{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -120,6 +120,10 @@ body {
 .hideTicketButton {
  margin-bottom: -10px;
  margin-top: 20px;
+ display: none;
+}
+.ticket:hover .hideTicketButton{
+    display: inline-block;
 }
 .userEmail {
  margin-bottom: 5px;
