--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,24 +11,24 @@ body {
  background-color: var(--bgColor);
  max-width: 100vw;
 }
-.app-title{
-    font-size: 40px;
-    font-family: cursive;
-    text-align: center;
-    padding: 30px 0;
+.app-title {
+ font-size: 40px;
+ font-family: cursive;
+ text-align: center;
+ padding: 30px 0;
 }
-.nav-bar{
-    display: flex;
-    font-size: 22px;
-    align-items: center;
-    background-color: var(--ticketColor);
+.nav-bar {
+ display: flex;
+ font-size: 22px;
+ align-items: center;
+ background-color: var(--ticketColor);
 }
-.nav-bar li{
-    list-style: none;
-    padding: 5px;
+.nav-bar li {
+ list-style: none;
+ padding: 5px;
 }
-.sortButton{
-    cursor: pointer;
+.sortButton {
+ cursor: pointer;
 }
 .container {
  display: flex;
@@ -75,6 +75,7 @@ body {
  height: 2rem;
  font-size: 18px;
  padding-left: 10px;
+ margin-bottom: 30px;
 }
 .btn {
  border: 2px solid;
@@ -91,23 +92,24 @@ body {
  opacity: 0.6;
 }
 
-.counter{
-    margin: 20px;
+.counter {
+ margin: 20px;
 }
 
-.hiddenCounter{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.hiddenCounter {
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
 
 .restore-button {
- height: 2.3rem; 
+ height: 2.3rem;
 }
 
 #searchResults {
  font-family: cursive;
  margin-top: 0;
+ margin-bottom: 30px;
 }
 
 .labels {
@@ -134,8 +136,8 @@ body {
  margin-top: 20px;
  display: none;
 }
-.ticket:hover .hideTicketButton{
-    display: inline-block;
+.ticket:hover .hideTicketButton {
+ display: inline-block;
 }
 .userEmail {
  margin-bottom: 5px;
